<resources>
    <string name="app_name">NixSolutionsTest</string>
    <string name="purchases">purchases</string>
    <string name="completed_purchases">completed</string>
    <string name="enter_description">description</string>
    <string name="enter_price">price</string>
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
    <string name="enter_some_text">enter some text</string>
    <string name="enter_some_price">enter some price</string>
    <string name="price">price:"  "</string>
    <string name="select_all">Select all</string>
    <string name="upload_new_image">Upload a new image using:</string>
    <string name="storage_permission">Storage permission is needed to show files count</string>
    <string name="storage_permission_isnt_granted">Storage permission isn\'t granted</string>
    <string name="settings">SETTINGS</string>
    <string name="open_permissions">Open Permissions and grant the Storage permission</string>
    <string name="grant">GRANT</string>
    <string name="storage_permissions_denied">Storage Permissions denied</string>
</resources>
