<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:orientation="vertical"
    tools:context=".view.NewPurchaseActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/description"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_action_add_white"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="1dp"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@id/price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_bottom_left_corner_0"
        android:gravity="center"
        android:hint="@string/enter_description"
        android:inputType="text"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description_edit_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_alignStart="@id/description"
        android:text="@string/enter_some_text"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@id/accept"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_bottom_left_corner_0"
        android:gravity="center"
        android:hint="@string/enter_price"
        android:inputType="number"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_edit_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_alignStart="@id/price"
        android:text="@string/enter_some_price"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/price"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rounded_rectangle_white"
        android:text="@string/accept"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/price"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rounded_rectangle_white"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite" />

</RelativeLayout>